@@ -28,12 +28,12 @@ typedef struct {
 
 void sha256_starts( context_sha256_t *ctx );
 
-void sha256_update( context_sha256_t *ctx, uint8_t *input, uint32_t length );
+void sha256_update( context_sha256_t *ctx, const uint8_t *input, uint32_t length );
 
 void sha256_finish( context_sha256_t *ctx, uint8_t digest[32] );
 
 int hash_init_sha256(void * ctx);
-int hash_update_sha256(void * ctx, unsigned char *buf, uint64_t len);
+int hash_update_sha256(void * ctx, const unsigned char *buf, size_t len);
 int hash_final_sha256(void * ctx, unsigned char *digest);
 
 __END_DECLS
