@@ -1,3 +1,7 @@
+2011-07-10  Simson Garfinkel  <simsong@imac3.home>
+
+	* src/md5.h: all update functions modified to take size_t as the length, becuase you can't pass a size larger than size_t.
+
 2011-07-07  Simson Garfinkel  <simsong@t.nitroba.org>
 
 	* src/dig.cpp (process_dir): modified conditional compilation for WIN32
